# models

./: README.md  claude.md  ibm.md  kimi.md  minimax.md  opencode.md  qwen.md  voyage.md  zhipu.md
fine-tuning/: LoRa.md
huggingface/: README.md  gradio_pdf.md
liteLLM/: README.md  litellm_config.yaml
lms/: README.md
ollama/: cloud.md  (+6 more)
py/: README.md  pyproject.toml
py/davidkhala/llm/anthropic/: __init__.py  minimax.py
py/davidkhala/llm/api/: __init__.py  minimax.py  openrouter.py  siliconflow.py
py/davidkhala/llm/atlas/: __init__.py
py/davidkhala/llm/ibm/: __init__.py  guardian.py
py/davidkhala/llm/model/: __init__.py  chat.py  embed.py  file.py  garden.py  openrouter.py  protocol.py  rerank.py  videos.py
py/davidkhala/llm/model/prompt/: __init__.py  annotation.py  file.py  image.py  param.py
py/davidkhala/llm/ollama/: __init__.py  cloud.py
py/davidkhala/llm/openai/: __init__.py  azure.py  classic.py  current.py  databricks.py  kimi.py  minimax.py  native.py
py/davidkhala/llm/openrouter/: __init__.py
py/davidkhala/llm/zai/: __init__.py  chat.py  video.py
py/tests/: atlas_test.py  ibm_test.py  minimax_test.py  ollama_test.py  openrouter_test.py  z.ai_test.py  zai_test.py
py/tests/api/: minimax_test.py  openrouter_test.py  siliconflow_test.py
py/tests/openai/: azure_test.py  databricks_test.py  openai_test.py
py/tests/openai_tests/: azure_test.py  databricks_test.py  kimi_test.py
py/tests/openai_tests/azure/: japanest_test.py  sg_test.py
vllm/: README.md  pyproject.toml
vllm/davidkhala/models/vllm/: run.py
vllm/tests/: run_test.py
(+8 files in other folders)
