[project]
name = "davidkhala.models.vllm"
version = "0.2.1"
description = "vllm serving"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "vllm"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest"
]
